--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,8 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = render 'layouts/navbar'
-    .wrapper-content
+    = render 'layouts/header'
+    #wrapper-content
       .container
         = yield
+    = render 'layouts/footer'
