--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -6,11 +6,15 @@
         .icon-bar
           background: $white
       .logo-header
-        color: $white
         padding: 5px 0
         font-size: 2em
+        a
+          color: $white
     .navbar-collapse
       .navbar-nav
         li
           a
             color: $white
+            &:hover
+              background: transparent
+              text-decoration: underline
