--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
           %span.icon-bar
           %span.icon-bar
         .logo-header
-          Rails Bank
+          = link_to "Rails Bank", root_path
       #navbar-collapse.collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right
           - if current_admin
