--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -15,6 +15,10 @@
         li
           a
             color: $white
-            &:hover
+            &:hover, &:focus
               background: transparent
               text-decoration: underline
+        .dropdown-menu
+          li
+            a
+              color: $dark
