--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,14 +14,10 @@
           - if current_admin
             %li.dropdown
               %a.dropdown-toggle.user-menu{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+                Hola Admin
                 %span.caret
               %ul.dropdown-menu
-                %li
-                  %a{:href => "#"}
-                    Hola señor bank
-                %li.divider{:role => "separator"}
-                %li= link_to "Edit Account", edit_admin_registration_path
-                %li= link_to "Sign out", destroy_admin_session_path, method: :delete
+                %li= link_to "Editar Cuenta", edit_admin_registration_path
+                %li= link_to "Salir", destroy_admin_session_path, method: :delete
           - else
-            %li= link_to "Registro", new_admin_registration_path
             %li= link_to "Iniciar", new_admin_session_path
