--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,8 +1,9 @@
 - if current_admin
-  %h1 Hola Administrador
-  %p Estas son las opciones que puedes hacer
-  %ul
-    %li 
-      = link_to "Crear cliente", new_customer_registration_path
+  .row
+    .col-sm-12
+      %h1 Hola Administrador
+      %p Estas son las opciones que puedes hacer
+    .col-sm-4
+      = link_to "Clientes", customers_path
 - else
   %h1 Hi this is a great Bank!
