--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,5 +5,7 @@
       %p Estas son las opciones que puedes hacer
     .col-sm-4
       = link_to "Clientes", customers_path
+    .col-sm-4
+      = link_to "Cuentas", accounts_path
 - else
   %h1 Hi this is a great Bank!
