Create basic structure for dynamic selects in debit card

--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -28,7 +28,7 @@
       %td
         = customer.email
       %td
-        = customer.account.count
+        = customer.accounts.count
       %td
         = link_to ' Editar', edit_customer_path(customer)
       %td
