--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,5 +7,7 @@
       = link_to "Clientes", customers_path
     .col-sm-4
       = link_to "Cuentas", accounts_path
+    .col-sm-4
+      = link_to "Tarjetas", debit_cards_path
 - else
   %h1 Hi this is a great Bank!
