--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -18,7 +18,7 @@
       %td
         = customer.id
       %td
-        = customer.first_name + customer.last_name
+        = "#{customer.first_name} #{customer.last_name}"
       %td
         = customer.document_number
       %td
