--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -19,7 +19,7 @@
       %td
         = account.amount
       %td
-        = name_customer(account.customer_id)
+        = get_name_customer(account.customer_id)
       %td
         = link_to ' Editar', edit_account_path(account)
       %td
