--- a/app/views/debit_cards/index.html.haml
+++ b/app/views/debit_cards/index.html.haml
@@ -6,6 +6,7 @@
       %th ID
       %th Numero de cuenta
       %th Cliente
+      %th Saldo
       %th Borrar
   %tbody
   - @debit_cards.each do |card|
@@ -13,9 +14,11 @@
       %td
         = card.id
       %td
-        = card.account_id
+        = get_account_number(card.account_id)
       %td
-        = card.customer_id
+        = get_name_customer(card.customer_id)
+      %td
+        = get_amount(card.account_id)
       %td
         = link_to ' Eliminar', debit_card_path(card), method: :delete, data: { confirm: '¿Estas seguro?' }
 
