--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,5 +16,10 @@
         - if alert
           %p.alert.alert-danger 
             = alert
+        - if @errors
+          %p.alert.alert-danger
+            %ul
+              - @errors.each do |error|
+                %li= error
         = yield
     = render 'layouts/footer'
