Delete Unnecessary CSS files and add fonts

--- a/app/assets/stylesheets/_tags.sass
+++ b/app/assets/stylesheets/_tags.sass
@@ -7,7 +7,11 @@ a, a:hover, a:focus
   text-decoration: none
   
 body
-  color: $dark
+  font-family: $primary-font
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+  font-size: 16px
+  color: $color-default
 
 img
   max-width: 100%
