--- a/app/assets/stylesheets/_variables.sass
+++ b/app/assets/stylesheets/_variables.sass
@@ -6,4 +6,9 @@ $gray : #C6C6C6
 $gray-light : #F5F5F5
 
 // Custom colors
+$color-default : $dark
 $blue : #36AEEC
+
+// Font
+$base-font-size : 16px
+$primary-font : "VarelaRound-Regular"
