Add styles for form login

--- a/app/assets/stylesheets/_variables.sass
+++ b/app/assets/stylesheets/_variables.sass
@@ -7,7 +7,7 @@ $gray-light : #F5F5F5
 
 // Custom colors
 $color-default : $dark
-$blue : #36AEEC
+$blue : #3651CC
 
 // Font
 $base-font-size : 16px
