--- a/app/assets/stylesheets/_tags.sass
+++ b/app/assets/stylesheets/_tags.sass
@@ -5,8 +5,10 @@
 
 a, a:hover, a:focus
   text-decoration: none
+  color: $blue
   
 body
+  background-color: $gray-light
   font-family: $primary-font
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
