--- a/app/assets/stylesheets/_variables.sass
+++ b/app/assets/stylesheets/_variables.sass
@@ -8,6 +8,9 @@ $gray-light : #F5F5F5
 // Custom colors
 $color-default : $dark
 $blue : #3651CC
+$green : #31B792
+$red : #D66881
+$yellow : #FED777
 
 // Font
 $base-font-size : 16px
