--- a/app/assets/stylesheets/_main.sass
+++ b/app/assets/stylesheets/_main.sass
@@ -5,3 +5,20 @@
 
 .info
   margin: 1em 0
+
+.box
+  text-align: center
+  background-color: $white
+  border: 1px solid darken($gray-light, 5)
+  border-radius: 5px
+  padding: 1em
+  &:focus
+    border: 1px solid darken($gray-light, 10)
+  img
+    width: 80%
+
+.edit-icon
+  color: $green
+.close-icon
+  a
+    color: $red
