--- a/app/views/bank_transactions/index.html.haml
+++ b/app/views/bank_transactions/index.html.haml
@@ -23,4 +23,4 @@
       %td
         = get_name_customer(transaction.target_account)
         
-= link_to "Hacer una transferencia", new_bank_transaction_path
+= link_to "Hacer una transferencia", new_bank_transaction_path, {class: 'btn btn-custom'}
