--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,4 +1,4 @@
 .row
-  .col-sm-6.col-sm-offset-3
+  .col-sm-6.col-sm-offset-3.form-section
     %h1 Nuevo Cliente
     = render 'form', customer: @customer
