--- a/app/views/debit_cards/new.html.haml
+++ b/app/views/debit_cards/new.html.haml
@@ -1,13 +1,11 @@
 .row
-  .col-sm-6.col-sm-offset-3
+  .col-sm-6.col-sm-offset-3.form-section
     %h1 Nueva tarjeta
     = form_for :debit_card, url: debit_cards_path do |f|
       .form-group
-        = f.label "Selecciona un cliente"
-        = f.collection_select(:customer_id, Customer.all, :id, :first_name, {prompt: 'Clientes'}, {class: 'form-control' })
+        = f.collection_select(:customer_id, Customer.all, :id, :first_name, {prompt: 'Selecciona un cliente'}, {class: 'form-control' })
       .form-group
-        = f.label "Selecciona una cuenta"
-        = f.grouped_collection_select(:account_id, Customer.all, :accounts, :first_name, :id, :account_number, {prompt: 'Cuentas'}, {class: 'form-control' })
+        = f.grouped_collection_select(:account_id, Customer.all, :accounts, :first_name, :id, :account_number, {prompt: 'Selecciona una cuenta'}, {class: 'form-control' })
       .form-group
         = f.submit "Crear Cuenta", class: 'btn btn-custom'
 
