--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
           %p.alert.alert-danger 
             = alert
         - if @errors
-          %p.alert.alert-danger
+          .alert.alert-danger
             %ul
               - @errors.each do |error|
                 %li= error
