--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,8 @@
 // Dependencies
 @import "bootstrap-sprockets"
 @import "bootstrap"
+@import "font-awesome-sprockets"
+@import "font-awesome"
 
 // Base
 @import "variables"
