--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -1,21 +1,15 @@
 = form_for(customer) do |f|
   .form-group
-    = f.label "Nombre"
-    = f.text_field :first_name, class: 'form-control', autofocus: true
+    = f.text_field :first_name, placeholder: 'Nombre', class: 'form-control', autofocus: true
   .form-group
-    = f.label "Apellido"
-    = f.text_field :last_name, class: 'form-control'
+    = f.text_field :last_name, placeholder: 'Apellido', class: 'form-control'
   .form-group
-    = f.label "Numero de Cedula"
-    = f.text_field :document_number, class: 'form-control'
+    = f.text_field :document_number, placeholder: 'Numero de Cedula', class: 'form-control'
   .form-group
-    = f.label "Celular"
-    = f.text_field :phone, class: 'form-control'
+    = f.text_field :phone, placeholder: 'Celular', class: 'form-control'
   .form-group
-    = f.label "Ciudad"
-    = f.text_field :city, class: 'form-control'
+    = f.text_field :city, placeholder: 'Ciudad', class: 'form-control'
   .form-group
-    = f.label "Email"
-    = f.email_field :email, class: 'form-control'
+    = f.email_field :email, placeholder: 'Email', class: 'form-control'
   .form-group
     = f.submit customer.new_record? ? 'Registrar Cliente' : 'Actualizar Cliente', class: 'btn btn-custom'
